# game-state-api

./: .gitignore  Cargo.toml  README.md  log4rs.yml
.github/workflows/: main.yml
api/: Cargo.toml
api/src/: lib.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs  models.rs  schema.rs
service/: Cargo.toml
service/src/: game_service.rs  game_state_service.rs  lib.rs  player_service.rs
shared/: Cargo.toml
shared/src/: error.rs  game_status.rs  lib.rs  request.rs  response.rs  score.rs
src/: main.rs
src/controller/: client_message.rs  game.rs  mod.rs
src/database/: mod.rs  models.rs  schema.rs
src/error/: mod.rs
src/events/: events.rs  message.rs  mod.rs  publish.rs  subscribe.rs
src/repositories/: game_repository.rs  mod.rs  player_repository.rs  round_repository.rs  state_handler.rs
src/repository/: game_repo.rs  mod.rs  player_repo.rs  player_round_scoring_repo.rs  player_scoring_repo.rs  round_repo.rs
src/routes/: game_routes.rs  mod.rs  player_routes.rs
src/secrets/: mod.rs  secret_provider.rs
src/services/: game_service.rs  game_state_service.rs  mod.rs  player_service.rs
src/types/: game_status.rs  mod.rs  order.rs  order_fields.rs  request_events.rs  request_options.rs  response_events.rs
src/utils/: date.rs  mod.rs  request_options.rs  status_codes.rs  test.rs  types.rs
