[package]
name = "game-state-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clerk-rs = "0.2.3"
diesel = { version = "2.1.4", features = ["postgres", "r2d2"] }
log4rs = "1.3.0"
redis = "0.24.0"
rocket = "0.5.0"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = "1.36.0"
uuid = { version = "1.7.0", features = ["v4"] }
