[package]
name = "game-state-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono"] }
redis = "0.25.0"
rocket = "0.5.0"
serde = "1.0.197"
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["v4"] }
ws = { package = "rocket_ws", version = "0.1.0" }
