[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
diesel = { version = "2.1.5", features = ["postgres", "chrono", "serde_json"] }
dotenvy = "0.15.7"
redis = "0.25.2"
serde = "1.0.197"
